Fixed the issue with shipping options not showing on checkout

--- a/css/st-cart.css
+++ b/css/st-cart.css
@@ -697,7 +697,7 @@
   }
 
   .st-chkout-sum {
-    margin-top: 40px;
+    margin: 40px 0px 60px 0px;
   }
 }
 
